- Fix for bug #49223 Inconsistency using get_defined_constants(true)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@287429 c90b9560-bf6c-de11-be94-00142212c4b1