ext/hash/hash.c
@@ -812,8 +812,7 @@ static void mhash_init(INIT_FUNC_ARGS)
 		len = slprintf(buf, 127, "MHASH_%s", algorithm.mhash_name, strlen(algorithm.mhash_name));
 		zend_register_long_constant(buf, len + 1, algorithm.value, CONST_CS | CONST_PERSISTENT, module_number TSRMLS_CC);
 	}
-
-	zend_register_module_ex(&mhash_module_entry TSRMLS_CC);
+	zend_register_internal_module(&mhash_module_entry TSRMLS_CC);
 }
 
 /* {{{ proto binary mhash(int hash, binary data [, binary key]) U
